developing the pcb

--- a/sw/CMakeLists.txt
+++ b/sw/CMakeLists.txt
@@ -35,24 +35,41 @@ pico_sdk_init()
 
 add_executable(picocd
     src/main.cc
-    
+    src/usb.c
+
     src/printf/printf.c
     src/printf/putchar.c
     
     src/roms/spelunk-en.rom.cc
+    src/roms/pwnd.rom.cc
     )
 
 pico_generate_pio_header(picocd ${CMAKE_CURRENT_SOURCE_DIR}/src/bus.pio)
 
+# Make sure TinyUSB can find tusb_config.h
+target_include_directories(picocd PUBLIC ${CMAKE_CURRENT_LIST_DIR}/src)
+
 # pull in common dependencies
 target_link_libraries(picocd 
-    pico_stdlib 
-    hardware_pio 
-    pico_multicore)
+#    pico_stdlib 
+    hardware_gpio
+#    hardware_uart
+    hardware_divider
+    pico_time
+    pico_util
+    pico_platform
+    pico_runtime
+#    pico_stdio
 
-if (PICO_CYW43_SUPPORTED)
-    target_link_libraries(blink pico_cyw43_arch_none)
-endif()
+    hardware_pio 
+    pico_multicore
+    tinyusb_host 
+    tinyusb_board)
+
+
+#if (PICO_CYW43_SUPPORTED)
+#    target_link_libraries(blink pico_cyw43_arch_none)
+#endif()
 
 # create map/bin/hex file etc.
 pico_add_extra_outputs(picocd)
@@ -63,3 +80,5 @@ set (PICO_COPY_TO_RAM 1)
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0")
 
 # add url via pico_set_program_url
+
+# family_configure_host_example(picocd noos)
